Added al sections

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </div>
         <img src="./image/hero-img.png" alt="hero" width="605" height="496">
       </section>
+
       <section class="feature">
-        <h2>We design tools to unveil your superpowers</h2>
+        <h2>We design tools to unveil<br/> your superpowers</h2>
         <ul>
             <li>
                 <svg>
@@ -82,6 +83,111 @@
         </ul>
         <button>SIGN UP NOW</button>
       </section>
+
+      <section class="design">
+        <div class="design-descr">
+          <p>Effortless Validation for</p>
+          <h2>Design Professionals</h2>
+          <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+          <ul>
+            <li>
+              <h6>Accessory makers</h6>
+              <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+              <h6>Alterationists</h6>
+              <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+            <li>
+              <h6>Custom Design designers</h6>
+              <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+          </ul>
+        </div>
+        <svg width="520px" height="574px">
+                    <use xlink:href="./icon/design.svg"></use>
+                </svg>
+      </section>
+      <section class="product">
+        <svg width="535px" height="521px">
+                    <use xlink:href="./icon/product.svg"></use>
+                </svg>
+                <div class="product-descr">
+                  <p>Easier decision making for</p>
+                  <h2>Product Managers</h2>
+                  <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+                  <ul>
+                    <li>
+                      <svg width="35px" height="35px">
+                    <use xlink:href="./icon/ok.svg"></use>
+                </svg>
+                      <p>Never worry about overpaying for your energy again.</p>
+                    </li>
+                    <li>
+                      <svg width="35px" height="35px">
+                    <use xlink:href="./icon/ok.svg"></use>
+                </svg>
+                      <p> We will only switch you to energy companies that we trust and will treat you right</p>
+                    </li>
+                    <li>
+                      <svg width="35px" height="35px">
+                    <use xlink:href="./icon/ok.svg"></use>
+                </svg>
+                      <p>We track the markets daily and know where the savings are.</p>
+                    </li>
+                  </ul>
+                </div>
+      </section>
+
+      <section class="marketers">
+        <div class="marketers">
+          <p>Optimisation for</p>
+          <h2>Marketers</h2>
+          <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+          <ul>
+            <li>
+              <h6>Accessory makers</h6>
+              <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+            </li>
+            <li>
+              <h6>Alterationists</h6>
+              <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+            <li>
+              <h6>Custom Design designers</h6>
+              <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+            </li>
+          </ul>
+        </div>
+        <svg width="542px" height="609px">
+                    <use xlink:href="./icon/marketers.svg"></use>
+                </svg>
+      </section>
     </main>
+    <footer>
+      <a href="/" class="logo">
+        <svg width="187" height="32">
+          <use xlink:href="./icon/logo.svg"></use>
+        </svg>
+      </a>
+      <div class="footer-descr">
+        <ul>
+          <li>About Us</li>
+          <li>Blog</li>
+          <li>Contact</li>
+          <li>FAQ</li>
+        </ul>
+        <ul>
+          <li>Disclaimer</li>
+          <li>Financing</li>
+          <li>Privacy Policy</li>
+          <li>Terms of Service</li>
+        </ul>
+        <form action="">
+          <input type="text">
+          <button type="submit">Sign up Now</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
