--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Productly</title>
   </head>
@@ -17,11 +20,11 @@
         </svg>
       </a>
       <nav>
-        <ul>
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Customers</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Resources</a></li>
+        <ul class="links-nav">
+          <li class="link"><a href="#">Product</a></li>
+          <li><a href="#" class="link">Customers</a></li>
+          <li><a href="#" class="link">Pricing</a></li>
+          <li><a href="#" class="link">Resources</a></li>
         </ul>
       </nav>
       <button class="btn btn-in">Sign In</button>
@@ -33,53 +36,58 @@
         <div class="descr">
           <h2 class="title">The Design Thinking superpowers</h2>
           <p class="subtitle">
-            Tools, tutorials, design and innovation experts, all in one place!
-            The most intuitive way to imagine your next user experience.
+            Tools, tutorials, design and innovation experts, all<br />in one
+            place! The most intuitive way to imagine<br />your next user
+            experience.
           </p>
 
           <div class="group-btn">
             <button class="btn-start">Get started</button>
             <button class="btn-watch">
-              <svg width="20" height="27" class="triagle">
+              <svg width="20" height="17" class="triagle">
                 <use xlink:href="./icon/Triangle.svg"></use>
               </svg>
               Watch the Video
             </button>
           </div>
-          
         </div>
-        <img src="./image/hero-img.png" alt="hero" width="605" height="496">
+        <img src="./image/hero-img.png" alt="hero" width="605" height="496" />
       </section>
 
       <section class="feature">
-        <h2>We design tools to unveil<br/> your superpowers</h2>
+        <h2>
+          We design tools to unveil<br />
+          your superpowers
+        </h2>
         <ul>
-            <li>
-                <svg>
-                    <use xlink:href="./icon/mouse.svg"></use>
-                </svg>
-                <h5>First click tests</h5>
-                <p>While most people enjoy casino gambling,</p>
-            </li>
-            <li>
-                <svg>
-                    <use xlink:href="./icon/yellow.svg"></use>
-                </svg>
-                <h5>Design surveys</h5>
-                <p>Sports betting, lottery and bingo playing for the fun</p>
-            </li>
-            <li>
-                <svg>
-                    <use xlink:href="./icon/heart.svg"></use>
-                </svg>
-                <h5>Preference tests</h5>
-                <p>The Myspace page defines the individual.</p>
-            </li>
-            <li>
-                <svg><use xlink:href="./icon/watch.svg"></use></svg>
-                <h5>Five second tests</h5>
-                <p>Personal choices and the overall personality of the person. </p>
-            </li>
+          <li>
+            <svg width="50px" height="50px">
+              <use xlink:href="./icon/mouse.svg"></use>
+            </svg>
+            <h5>First click tests</h5>
+            <p>While most people enjoy casino gambling,</p>
+          </li>
+          <li>
+            <svg width="50px" height="50px">
+              <use xlink:href="./icon/yellow.svg"></use>
+            </svg>
+            <h5>Design surveys</h5>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <svg width="50px" height="50px">
+              <use xlink:href="./icon/heart.svg"></use>
+            </svg>
+            <h5>Preference tests</h5>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <svg width="50px" height="50px">
+              <use xlink:href="./icon/watch.svg"></use>
+            </svg>
+            <h5>Five second tests</h5>
+            <p>Personal choices and the overall personality of the person.</p>
+          </li>
         </ul>
         <button>SIGN UP NOW</button>
       </section>
@@ -107,7 +115,8 @@
         <svg width="520px" height="574px">
                     <use xlink:href="./icon/design.svg"></use>
                 </svg>
-      </section>
+      </section> 
+
       <section class="product">
         <svg width="535px" height="521px">
                     <use xlink:href="./icon/product.svg"></use>
@@ -118,28 +127,31 @@
                   <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                   <ul>
                     <li>
-                      <svg width="35px" height="35px">
-                    <use xlink:href="./icon/ok.svg"></use>
-                </svg>
+                      <svg width="35px" height="35px" class="product-svg">
+                       <use xlink:href="./icon/ok.svg">
+                       </use>
+                    </svg>
                       <p>Never worry about overpaying for your energy again.</p>
                     </li>
                     <li>
-                      <svg width="35px" height="35px">
-                    <use xlink:href="./icon/ok.svg"></use>
-                </svg>
+                      <svg width="35px" height="35px" class="product-svg">
+                       <use xlink:href="./icon/ok.svg">
+                       </use>
+                    </svg>
                       <p> We will only switch you to energy companies that we trust and will treat you right</p>
                     </li>
                     <li>
-                      <svg width="35px" height="35px">
-                    <use xlink:href="./icon/ok.svg"></use>
-                </svg>
+                      <svg width="35px" height="35px" class="product-svg">
+                       <use xlink:href="./icon/ok.svg">
+                       </use>
+                    </svg>
                       <p>We track the markets daily and know where the savings are.</p>
                     </li>
                   </ul>
                 </div>
       </section>
 
-      <section class="marketers">
+       <section class="marketers">
         <div class="marketers">
           <p>Optimisation for</p>
           <h2>Marketers</h2>
