--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="/" class="logo">
+      <a href="#" class="logo">
         <svg width="187" height="32">
           <use xlink:href="./icon/logo.svg"></use>
         </svg>
@@ -152,7 +152,7 @@
       </section>
 
        <section class="marketers">
-        <div class="marketers">
+        <div class="marketers-descr">
           <p>Optimisation for</p>
           <h2>Marketers</h2>
           <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
@@ -177,26 +177,26 @@
       </section>
     </main>
     <footer>
-      <a href="/" class="logo">
+      <a href="#" class="logo">
         <svg width="187" height="32">
           <use xlink:href="./icon/logo.svg"></use>
         </svg>
       </a>
       <div class="footer-descr">
         <ul>
-          <li>About Us</li>
-          <li>Blog</li>
-          <li>Contact</li>
-          <li>FAQ</li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">FAQ</a></li>
         </ul>
         <ul>
-          <li>Disclaimer</li>
-          <li>Financing</li>
-          <li>Privacy Policy</li>
-          <li>Terms of Service</li>
+          <li><a href="#">Disclaimer</a></li>
+          <li><a href="#">Financing</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
         </ul>
         <form action="">
-          <input type="text">
+          <input type="tel" placeholder="Your phone number">
           <button type="submit">Sign up Now</button>
         </form>
       </div>
