--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>Productly</title>
+      <link rel="icon" type="image/svg+xml" href="./icon/favicon.svg">
+
   </head>
   <body>
     <header>
